# Projeto_Temperature_Monitor

./: CMakeLists.txt  main.c
